/*
 * SonarQube
 * Copyright (C) 2009-2023 SonarSource SA
 * mailto:info AT sonarsource DOT com
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 3 of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public License
 * along with this program; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 */
import { shallow } from 'enzyme';
import * as React from 'react';
import { mockAvailablePlugin, mockPendingPlugin } from '../../../helpers/mocks/plugins';
import PluginsList, { PluginsListProps } from '../PluginsList';

it('should render correctly', () => {
  expect(shallowRender()).toMatchSnapshot('default');
  expect(
    shallowRender({
      pending: {
        installing: [mockPendingPlugin({ key: 'sonar-foo' })],
        updating: [mockPendingPlugin({ key: 'sonar-bar' })],
        removing: [mockPendingPlugin({ key: 'sonar-baz' })],
      },
    })
  ).toMatchSnapshot('with status');
});

function shallowRender(props: Partial<PluginsListProps> = {}) {
  return shallow<PluginsListProps>(
    <PluginsList
      plugins={[
        mockAvailablePlugin({ key: 'sonar-foo' }),
        mockAvailablePlugin({ key: 'sonar-bar', name: 'Sonar Bar' }),
        mockAvailablePlugin({ key: 'sonar-baz', name: 'Sonar Baz' }),
      ]}
      pending={{ installing: [], updating: [], removing: [] }}
      readOnly={false}
      refreshPending={jest.fn()}
      {...props}
    />
  );
}
