// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="boxed-group boxed-group-inner"
  id="marketplace-plugins"
>
  <ul>
    <li
      className="panel panel-vertical"
      key="sonar-bar"
    >
      <table
        className="marketplace-plugin-table"
      >
        <tbody>
          <PluginAvailable
            installedPlugins={[]}
            plugin={
              {
                "key": "sonar-bar",
                "name": "Sonar Bar",
                "release": {
                  "date": "2020-01-01",
                  "version": "8.2",
                },
                "update": {
                  "requires": [],
                  "status": "available",
                },
              }
            }
            readOnly={false}
            refreshPending={[MockFunction]}
          />
        </tbody>
      </table>
    </li>
    <li
      className="panel panel-vertical"
      key="sonar-baz"
    >
      <table
        className="marketplace-plugin-table"
      >
        <tbody>
          <PluginAvailable
            installedPlugins={[]}
            plugin={
              {
                "key": "sonar-baz",
                "name": "Sonar Baz",
                "release": {
                  "date": "2020-01-01",
                  "version": "8.2",
                },
                "update": {
                  "requires": [],
                  "status": "available",
                },
              }
            }
            readOnly={false}
            refreshPending={[MockFunction]}
          />
        </tbody>
      </table>
    </li>
    <li
      className="panel panel-vertical"
      key="sonar-foo"
    >
      <table
        className="marketplace-plugin-table"
      >
        <tbody>
          <PluginAvailable
            installedPlugins={[]}
            plugin={
              {
                "key": "sonar-foo",
                "name": "Sonar Foo",
                "release": {
                  "date": "2020-01-01",
                  "version": "8.2",
                },
                "update": {
                  "requires": [],
                  "status": "available",
                },
              }
            }
            readOnly={false}
            refreshPending={[MockFunction]}
          />
        </tbody>
      </table>
    </li>
  </ul>
</div>
`;

exports[`should render correctly: with status 1`] = `
<div
  className="boxed-group boxed-group-inner"
  id="marketplace-plugins"
>
  <ul>
    <li
      className="panel panel-vertical"
      key="sonar-bar"
    >
      <table
        className="marketplace-plugin-table"
      >
        <tbody>
          <PluginAvailable
            installedPlugins={[]}
            plugin={
              {
                "key": "sonar-bar",
                "name": "Sonar Bar",
                "release": {
                  "date": "2020-01-01",
                  "version": "8.2",
                },
                "update": {
                  "requires": [],
                  "status": "available",
                },
              }
            }
            readOnly={false}
            refreshPending={[MockFunction]}
            status="updating"
          />
        </tbody>
      </table>
    </li>
    <li
      className="panel panel-vertical"
      key="sonar-baz"
    >
      <table
        className="marketplace-plugin-table"
      >
        <tbody>
          <PluginAvailable
            installedPlugins={[]}
            plugin={
              {
                "key": "sonar-baz",
                "name": "Sonar Baz",
                "release": {
                  "date": "2020-01-01",
                  "version": "8.2",
                },
                "update": {
                  "requires": [],
                  "status": "available",
                },
              }
            }
            readOnly={false}
            refreshPending={[MockFunction]}
            status="removing"
          />
        </tbody>
      </table>
    </li>
    <li
      className="panel panel-vertical"
      key="sonar-foo"
    >
      <table
        className="marketplace-plugin-table"
      >
        <tbody>
          <PluginAvailable
            installedPlugins={[]}
            plugin={
              {
                "key": "sonar-foo",
                "name": "Sonar Foo",
                "release": {
                  "date": "2020-01-01",
                  "version": "8.2",
                },
                "update": {
                  "requires": [],
                  "status": "available",
                },
              }
            }
            readOnly={false}
            refreshPending={[MockFunction]}
            status="installing"
          />
        </tbody>
      </table>
    </li>
  </ul>
</div>
`;
